corrected font sozes on smaller screens

--- a/_sass/base/_background.scss
+++ b/_sass/base/_background.scss
@@ -12,4 +12,7 @@ body {
   color: #222222;
   border: $border-width solid $c-page-border;
   background-color: #ffffff;
+  @include media(not-large) {
+    font-size: 1em;
+  }
 }
